syntax = "proto3";

package com.example.internal.input.reqreply.device;

import "com/example/commonmodels/device/device.proto";

option java_multiple_files = true;
option java_package = "com.example.internal.input.reqreply.device.get_all.proto";

message GetAllDevicesRequest {

}

message GetAllDevicesResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonmodels.device.Device devices = 1;
  }

  message Failure {
    string message = 100;
  }
}
